--- a/assets/source/css/frontend/layout/_main-content.scss
+++ b/assets/source/css/frontend/layout/_main-content.scss
@@ -19,6 +19,8 @@
 main,
 .sidebar {
 	@include span( 100% );
+
+	min-height: 1px;
 }
 
 
